# Trip-Planner

./: .gitignore  LICENSE  app.py  pyproject.toml  refrence.md  requirements.txt
src/agent/: agent.py
src/config/: config.py
src/core/: planner.py
src/models/: travel_models.py
src/tools/: currency_conversion.py  final_recommendation.py  places_info_search.py  weather.py
src/utils/: exception.py  logger.py
