[project]
name = "tripnepal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "airportsdata>=20260315",
    "chromadb>=1.5.9",
    "fpdf>=1.7.2",
    "google-search-results>=2.4.2",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-experimental>=0.4.2",
    "langchain-google-community>=5.0.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "logfire>=4.37.0",
    "plotly>=6.9.0",
    "psycopg[binary]>=3.3.4",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
    "unstructured>=0.23.1",
]
